RESOLVED FIXED190444
REGRESSION (r236935): Layout test fast/events/ios/keyboard-scrolling-distance.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=190444
Summary REGRESSION (r236935): Layout test fast/events/ios/keyboard-scrolling-distance...
Tim Horton
Reported 2018-10-10 14:45:58 PDT
REGRESSION (r236935): Layout test fast/events/ios/keyboard-scrolling-distance.html is timing out
Attachments
Patch (9.13 KB, patch)
2018-10-10 14:47 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-10-10 14:47:35 PDT
Tim Horton
Comment 2 2018-10-10 14:48:56 PDT
WebKit Commit Bot
Comment 3 2018-10-10 15:41:36 PDT
Comment on attachment 351987 [details] Patch Clearing flags on attachment: 351987 Committed r237020: <https://trac.webkit.org/changeset/237020>
WebKit Commit Bot
Comment 4 2018-10-10 15:41:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.